[package]
name = "dvfs"
version = "0.1.0"
edition = "2024"

[dependencies]
sel4-microkit = { git = "https://github.com/seL4/rust-sel4.git", rev = "d2bc5cf71c5455f85898a4768e9dcbaea39e1a7e" }
cpufreq = { git = "https://github.com/Cheng-Li1/freq-scaling-rs.git", rev = "29da4a2b7817c306e282783474a4b99d7442f066" }
sddf_timer = { path = "../../include/sddf_rust/timer" }

[net]
net.git-fetch-with-cli = true