# Copyright 2025, UNSW
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "sddf-rust"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
sddf-ipc-types = { git = "https://github.com/seL4/rust-sel4.git", tag = "v3.0.0" }
sel4-microkit = { git = "https://github.com/seL4/rust-sel4.git", tag = "v3.0.0" }
num_enum = { version = "0.7.5", default-features = false }