[package]
name = "sddf_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "sddf_rust"
path = "lib.rs"

[dependencies]
sel4-microkit = { git = "https://github.com/seL4/rust-sel4.git", rev = "ac5627ba7a67e71f33a8eb1c5d05de09bf94ef5e" }
sel4-microkit-message = { git = "https://github.com/seL4/rust-sel4.git", rev = "ac5627ba7a67e71f33a8eb1c5d05de09bf94ef5e" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "2.0", default-features = false, features = ["serde"] }