# Copyright 2025, UNSW
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "blk_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
sel4-microkit = { git = "https://github.com/seL4/rust-sel4.git", rev = "d2bc5cf71c5455f85898a4768e9dcbaea39e1a7e", features = ["alloc"] }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4.git", rev = "d2bc5cf71c5455f85898a4768e9dcbaea39e1a7e" }
meson_hal = { path = "../meson", optional = true }
sdmmc_protocol = { path = "protocol" }

[features]
dev-logs = ["sdmmc_protocol/dev-logs"]
meson = ["dep:meson_hal"]

[build]
build = "build.rs"