# Copyright 2025, UNSW
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "sdmmc_protocol"
version = "0.1.0"
edition = "2024"
authors = ["Cheng Li 李澄 <lichengchaoreng@gmail.com>"]

[lib]
name = "sdmmc_protocol"
path = "lib.rs"

[dependencies]
bitflags = "2.6.0"

[features]
default = []
# A feature specifically for enabling developer-level logging. The driver will always try to log errors.
dev-logs = []