[package]
name = "sdmmc_hal"
version = "0.1.0"
edition = "2021"

[lib]
name = "sdmmc_hal"
path = "lib.rs"

[dependencies]
sdmmc_protocol = { path = "../../sdmmc_protocol" }
sel4-microkit = { git = "https://github.com/seL4/rust-sel4.git", rev = "d3790bfd15512e18659f9491c319867fabf9552d", package = "sel4-microkit" }